# aws-iot-device-sdk-embedded-C

./: CMakeLists.txt  LICENSE_PUFSecurity.txt  README.md  README_PUFS.md  build.sh  config.sh  cp.sh
certs-puf/RootCA/pufs/: root_CA_cert.pem
certs-puf/device/c-test-thing/: c-test-iot-device.txt  c-test-thing-certificate.pem.crt  c-test-thing-private.pem.key  c-test-thing-public.pem.key  prov_exp_tmplate.json
certs-puf/device/c-test-thing-puf/: c-test-iot-device-puf.txt  deviceCert.crt  deviceCert.key  deviceCertAndCACert.crt  pubkey.pem
certs-puf/device/c-test-thing-puf-fpga/: c-test-iot-device-puf-fpga-pubkey.pem  c-test-iot-device-puf-fpga.pem.crt  c-test-iot-device-puf-fpga.txt
certs-puf/device/c-test-thing-uid/: pufs_4768418e-pubkey.pem.crt  uid_pufs_4768418e.txt
certs-puf/device/c-test-thing-uid-pufse/: pufs_e001b04e-pubkey.pem  pufs_e001b04e-pubkey.pem.crt  uid_pufs_e001b04e.txt
cmake_flags/: arm_tool_chain.cmake  pufs_flags.cmake
demos/fleet_provisioning/fleet_provisioning_with_csr/: demo_config.h
demos/jobs/jobs_demo_mosquitto/: CMakeLists.txt
demos/mqtt/mqtt_demo_mutual_auth/: CMakeLists.txt  demo_config.h
demos/mqtt/mqtt_demo_mutual_auth_pufs/: CMakeLists.txt  demo_config.h  mqtt_demo_mutual_auth_pufs.c
demos/mqtt/mqtt_demo_mutual_auth_pufs_hw/: CMakeLists.txt  core_mqtt_config.h  demo_config.h  env.sh  mqtt_demo_mutual_auth_pufs_hw.c  pufs_commandline.c  pufs_commandline.h  pufs_info.c  pufs_info.h  read_info.sh  run.sh
platform/posix/: posixFilePaths.cmake
platform/posix/include/: mbedtls_config.h
platform/posix/ota_pal/: CMakeLists.txt
platform/posix/transport/: CMakeLists.txt
platform/posix/transport/include/: pufs_hw_mbedtls_posix.h  pufs_mbedtls_posix.h
platform/posix/transport/src/: openssl_posix.c  pufs_hw_mbedtls_posix.c  pufs_mbedtls_posix.c
